--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   "homepage": "https://github.com/NativeScript/nativescript-app-templates",
   "dependencies": {
     "@nativescript/core": "~8.0.0",
+    "@nativescript/geolocation": "^7.1.1",
     "@nativescript/theme": "~3.0.1"
   },
   "devDependencies": {
+    "@nativescript/android": "8.0.0",
+    "@nativescript/ios": "8.0.0",
     "@nativescript/webpack": "beta"
   },
   "private": "true",
